# todolist

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: action.yml
infra/: .env.ci  .env.example  Makefile  docker-compose-ci.yaml  docker-compose-test.yaml  docker-compose.yaml
todo/: manage.py  setup.cfg
todo/bot/: admin.py  apps.py  custom_exceptions.py  models.py  serializers.py  urls.py  views.py
todo/bot/management/commands/: runbot.py
todo/bot/migrations/: 0001_initial.py  0002_alter_tguser_chat_id_alter_tguser_user.py  0003_tguser_verification_code.py
todo/bot/tg/: client.py  controller.py  dc.py
todo/core/: admin.py  models.py  serializers.py  urls.py  views.py
todo/core/migrations/: 0001_initial.py  0002_userrole_alter_user_options_user_role.py
todo/goals/: admin.py  filters.py  models.py  permissions.py  urls.py
todo/goals/migrations/: 0001_initial.py  0002_alter_goal_description_alter_goal_due_date_comment.py  0002_board_alter_goal_description_alter_goal_due_date_and_more.py  0002_goal.py  0003_create_new_objects.py  0004_alter_goalcategory_board.py
todo/goals/serializers/: board.py  category.py  comment.py  goal.py
todo/goals/views/: board.py  category.py  comment.py  goal.py
todo/tests/: conftest.py  factories.py  fixtures.py
todo/tests/test_boards/: board_api_tests.py
todo/tests/test_categories/: category_api_tests.py
todo/tests/test_comments/: comment_api_tests.py
todo/tests/test_goals/: goal_api_tests.py
todo/tests/test_user/: user_api_tests.py
todo/todo/: asgi.py  settings.py  urls.py  wsgi.py
