[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "Todo app on django rest framework"
authors = ["mgd <mr.zizikk@gamil.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "todo_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
social-auth-app-django = "^5.2.0"
urllib3 = "^1.26.16"
django-filter = "^23.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
