[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "Todo app on django rest framework"
authors = ["mgd <mr.zizikk@gamil.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "todo_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
social-auth-app-django = "^5.2.0"
urllib3 = "^1.26.16"
django-filter = "^23.2"
aiogram = "^2.25.1"
marshmallow = "^3.19.0"
requests = "^2.31.0"
mypy = "^1.3.0"
marshmallow-dataclass = "^8.5.14"
drf-spectacular = "^0.26.2"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"
pytest-factoryboy = "^2.5.1"
coverage = "^7.2.7"
pylint = "^2.17.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
django-debug-toolbar = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "todo.settings"
addopts = '-p no:warnings'
python_files = '*_tests.py test_*.py tests_*.py test_ _test'
